Fix vertical text alignment in suoritustaulukko

--- a/web/app/style/ammatillinen.less
+++ b/web/app/style/ammatillinen.less
@@ -31,7 +31,7 @@
       margin-right: 5px;
     }
 
-    td.pakollisuus, td.suoritus, td .remove-value {
+    td, td .remove-value {
       line-height: 35px;
       vertical-align: middle;
 
